# setsolver

./: .gitignore  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: pages.yml
classifier/: README.md  classifier.ipynb  pyproject.toml
public/: robots.txt  sitemap.xml
public/models/: README.md
src/: App.tsx  index.css  store.ts  types.ts  vite-env.d.ts
src/analysis/: inference.ts  opencv-detector.ts
src/components/: Camera.tsx  Canvas.tsx  Controls.tsx  SetLogo.tsx  Stats.tsx
src/game/: solver.ts  types.ts
src/hooks/: useSetSolver.ts
